fix overflow text views

--- a/Client/src/components/likedPosts/PostsLiked.module.css
+++ b/Client/src/components/likedPosts/PostsLiked.module.css
@@ -30,6 +30,7 @@
 .container h4 {
   white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .container img {
